--- a/composer.json
+++ b/composer.json
@@ -19,9 +19,9 @@
     ],
     "require": {
         "php": ">=7.1",
-        "illuminate/console": "~5.5.0|~5.6.0",
-        "illuminate/support": "~5.5.0|~5.6.0",
-        "spatie/laravel-backup": "^5.10"
+        "illuminate/console": "~5.5.0|~5.6.0|~5.7.0|~5.8.0|^6.0",
+        "illuminate/support": "~5.5.0|~5.6.0|~5.7.0|~5.8.0|^6.0",
+        "spatie/laravel-backup": "^5.10|^6.4"
     },
     "require-dev": {
         "mockery/mockery": "^1.0",
