--- a/composer.json
+++ b/composer.json
@@ -19,14 +19,14 @@
     ],
     "require": {
         "php": ">=7.1",
-        "illuminate/console": "~5.5.0|~5.6.0|~5.7.0|~5.8.0|^6.0|^7.0",
-        "illuminate/support": "~5.5.0|~5.6.0|~5.7.0|~5.8.0|^6.0|^7.0",
-        "spatie/laravel-backup": "^5.10|^6.4"
+        "illuminate/console": "^6.0|^7.0",
+        "illuminate/support": "^6.0|^7.0",
+        "spatie/laravel-backup": "^6.4"
     },
     "require-dev": {
         "mockery/mockery": "^1.0",
-        "phpunit/phpunit": "^6.0|^8.0",
-        "orchestra/testbench" : "^3.5|^4.0|^5.0",
+        "phpunit/phpunit": "^8.0",
+        "orchestra/testbench" : "^4.0|^5.0",
         "squizlabs/php_codesniffer": "^3.3.2"
     },
     "autoload": {
