--- a/composer.json
+++ b/composer.json
@@ -19,14 +19,14 @@
     ],
     "require": {
         "php": ">=7.2",
-        "illuminate/console": "^6.0|^7.0",
-        "illuminate/support": "^6.0|^7.0",
+        "illuminate/console": "^6.0|^7.0|^8.0",
+        "illuminate/support": "^6.0|^7.0|^8.0",
         "spatie/laravel-backup": "^6.4"
     },
     "require-dev": {
         "mockery/mockery": "^1.0",
         "phpunit/phpunit": "^8.0",
-        "orchestra/testbench" : "^4.0|^5.0",
+        "orchestra/testbench" : "^4.0|^5.0|^6.0",
         "squizlabs/php_codesniffer": "^3.3.2"
     },
     "autoload": {
