--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,20 +10,12 @@ jobs:
       fail-fast: true
       matrix:
         php: [7.3, 7.4, 8.0, 8.1]
-        laravel: [6.*, 7.*, 8.*]
+        laravel: [8.*]
         dependency-version: [prefer-lowest, prefer-stable]
         include:
           - laravel: 8.*
             testbench: 6.*
-          - laravel: 7.*
-            testbench: 5.*
-          - laravel: 6.*
-            testbench: 4.*
         exclude:
-          - php: 8.1
-            laravel: 6.*
-          - php: 8.1
-            laravel: 7.*
           - php : 8.1
             laravel: 8.*
             dependency-version: prefer-lowest
