--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
         "php": "^7.3|^8.0",
         "illuminate/console": "^8.0|^9.0",
         "illuminate/support": "^8.0|^9.0",
-        "spatie/laravel-backup": "^6.0|^7.0|8.0"
+        "spatie/laravel-backup": "^6.0|^7.0|^8.0"
     },
     "require-dev": {
         "mockery/mockery": "^1.4",
