--- a/composer.json
+++ b/composer.json
@@ -47,9 +47,9 @@
     },
     "scripts": {
         "lint": "vendor/bin/phpcs -p --standard=PSR12 src tests",
-        "lint-fix": "vendor/bin/phpcbf -p --standard=PSR12 src tests",
+        "lint:fix": "vendor/bin/phpcbf -p --standard=PSR12 src tests",
         "test": "vendor/bin/phpunit",
-        "test-coverage": "vendor/bin/phpunit --coverage-html coverage"
+        "test:coverage": "vendor/bin/phpunit --coverage-html coverage"
     },
     "config": {
         "sort-packages": true
