--- a/composer.json
+++ b/composer.json
@@ -25,13 +25,13 @@
     ],
     "require": {
         "php": "^8.0",
-        "illuminate/console": "^8.0|^9.0",
-        "illuminate/support": "^8.0|^9.0",
-        "spatie/laravel-backup": "^6.0|^7.0|^8.0"
+        "illuminate/console": "^9.0",
+        "illuminate/support": "^9.0",
+        "spatie/laravel-backup": "^8.0"
     },
     "require-dev": {
         "mockery/mockery": "^1.4",
-        "orchestra/testbench": "^6.0|^7.0",
+        "orchestra/testbench": "^7.0",
         "phpunit/phpunit": "^9.3.3",
         "squizlabs/php_codesniffer": "^3.6"
     },
